deployments/staging/apple-iap-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-apple-iap
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: api.staging.pepeunlimited.com
      http:
        paths:
          - backend:
              serviceName: apple-iap
              servicePort: 80
            path: /twirp/pepeunlimited.apple.AppleIAPService/*
